; ModuleID = '/home/carl/AnghaBench/libgit2/tests/apply/extr_fromfile.c_test_apply_fromfile__change_middle_shrink_nocontext.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/apply/extr_fromfile.c_test_apply_fromfile__change_middle_shrink_nocontext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@GIT_DIFF_OPTIONS_INIT = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@FILE_ORIGINAL = common dso_local global i32 0, align 4
@FILE_CHANGE_MIDDLE_SHRINK = common dso_local global i32 0, align 4
@PATCH_ORIGINAL_TO_MIDDLE_SHRINK_NOCONTEXT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"file.txt\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_apply_fromfile__change_middle_shrink_nocontext() #0 {
  %1 = alloca %struct.TYPE_4__, align 8
  %2 = bitcast %struct.TYPE_4__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %2, i8* align 8 bitcast (%struct.TYPE_4__* @GIT_DIFF_OPTIONS_INIT to i8*), i64 8, i1 false)
  %3 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  store i64 0, i64* %3, align 8
  %4 = load i32, i32* @FILE_ORIGINAL, align 4
  %5 = load i32, i32* @FILE_ORIGINAL, align 4
  %6 = call i32 @strlen(i32 %5)
  %7 = load i32, i32* @FILE_CHANGE_MIDDLE_SHRINK, align 4
  %8 = load i32, i32* @FILE_CHANGE_MIDDLE_SHRINK, align 4
  %9 = call i32 @strlen(i32 %8)
  %10 = load i32, i32* @PATCH_ORIGINAL_TO_MIDDLE_SHRINK_NOCONTEXT, align 4
  %11 = call i32 @validate_and_apply_patchfile(i32 %4, i32 %6, i32 %7, i32 %9, i32 %10, %struct.TYPE_4__* %1, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 33188)
  %12 = call i32 @cl_git_pass(i32 %11)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @validate_and_apply_patchfile(i32, i32, i32, i32, i32, %struct.TYPE_4__*, i8*, i32) #2

declare dso_local i32 @strlen(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
